# Postr

./: .gitignore  README.md  auth.py  features.py  login.py  main.py  postr.db  postr.tcss  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
client/: config.py  credentials.py  features.py  login.py  main.py  owner.py  postr.tcss  serverSelect.py
postr_tui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
posts/: hello.md  idk.md
server/: auth.py  db.py  server.py
