[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "postr-tui"
version = "0.1.1"
description = "A terminal-based blog/forum client built with Python and Textual"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "requests",
    "textual",
    "bcrypt",
    "psycopg2-binary",
    "gunicorn",
    "keyring",
]

[project.scripts]
postr-tui = "client.main:main"

[tool.setuptools.package-data]
client = ["*.tcss"]