[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "postr-tui"
version = "0.1.3"
description = "A terminal-based blog/forum client built with Python and Textual"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "textual",
    "bcrypt",
    "keyring",
]

[project.optional-dependencies]
server = [
    "flask",
    "gunicorn",
    "psycopg2-binary",
]

[project.scripts]
postr-tui = "client.main:main"

[tool.setuptools.packages.find]
include = ["client*", "server*"]

[tool.setuptools.package-data]
client = ["*.tcss"]